@@ -105,7 +105,8 @@ Please note that our support for the checkout block is still experimental and th
 * Fix - Incorrect customer links on Transactions page.
 * Fix - Incorrect prices in Payment Request Button for certain currencies.
 * Fix - Updates to fraud protection.
-* Fix - Prevent Payment Request buttons from showing up in Composite Product pages. 
+* Fix - Prevent Payment Request buttons from showing up in Composite Product pages.
+* Add - Onboarding flows on the admin WooCommerce > Subscriptions screen for stores with no subscriptions yet.
 
 = 3.3.0 - 2021-11-18 =
 * Add - Add Idempotency Key to POST headers.
