@@ -7,8 +7,9 @@
 * Fix - Incorrect customer links on Transactions page.
 * Fix - Incorrect prices in Payment Request Button for certain currencies.
 * Fix - Updates to fraud protection.
-* Fix - Prevent Payment Request buttons from showing up in Composite Product pages. 
+* Fix - Prevent Payment Request buttons from showing up in Composite Product pages.
 * Update - Updated @woocommerce/experimental package to v2.1.0.
+* Add - Onboarding flows on the admin WooCommerce > Subscriptions screen for stores with no subscriptions yet.
 
 = 3.3.0 - 2021-11-18 =
 * Add - Add Idempotency Key to POST headers.
